# shieldlabs

./: .gitignore  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/assets/isotopes/: isotopes.yml
cpp/assets/materials/: materials.yml
cpp/include/app/: AppMode.hpp  AppState.hpp
cpp/include/calc/: CalcScene.hpp  CompilerOutput.hpp  EvaluateRayPipeline.hpp  EvaluateSingleRay.hpp  GeometryUtils.hpp  HitClassification.hpp  IntegrateDose.hpp  RayHitProcessing.hpp  RayHitRecord.hpp  RayIntersection.hpp  RayTraversal.hpp  SceneCompiler.hpp  TransportRay.hpp
cpp/include/geometry/: GeometryEngine.hpp  Point.hpp  PointEntity.hpp  Viewport.hpp  Wall.hpp  WorldBounds.hpp
cpp/include/isotopes/: IsotopeRegistry.hpp
cpp/include/materials/: MaterialRegistry.hpp
cpp/include/optimization/: ShieldOptimizer.hpp
cpp/include/output/: BuildDosePointReports.hpp  DosePointReport.hpp  ExportCompilerOutputCSV.hpp  PrintCompilerOutput.hpp  PrintCompilerOutputUI.hpp
cpp/include/ui/: AddEntityCommand.hpp  AddWallCommand.hpp  AddWallLayerCommand.hpp  Command.hpp  Cosmetics.hpp  DeleteWallCommand.hpp  EditWallLayerCommand.hpp  GridMath.hpp  GridRenderer.hpp  RemoveEntityCommand.hpp  RemoveWallLayerCommand.hpp  ShiftGeometryCommand.hpp  UiLog.hpp  UndoStack.hpp
cpp/include/utils/: AppPaths.hpp  PdfToPng.hpp  ProjectIO.hpp
cpp/resources/: shieldlabs.rc
cpp/src/calc/: CompilerOutput.cpp  EvaluateRayPipeline.cpp  EvaluateSingleRay.cpp  HitClassification.cpp  IntegrateDose.cpp  RayHitProcessing.cpp  RayIntersection.cpp  RayTraversal.cpp  SceneCompiler.cpp  TransportRay.cpp
cpp/src/geometry/: GeometryEngine.cpp
cpp/src/isotopes/: IsotopeRegistry.cpp
cpp/src/materials/: MaterialRegistry.cpp
cpp/src/optimization/: ShieldOptimizer.cpp
cpp/src/output/: BuildDosePointReports.cpp  ExportCompilerOutputCSV.cpp  PrintCompilerOutput.cpp  PrintCompilerOutputUI.cpp
cpp/src/ui/: GridMath.cpp  GridRenderer.cpp  UiLog.cpp  main.cpp
cpp/src/utils/: AppPaths.cpp  PdfToPng.cpp  ProjectIO.cpp
